clusters/managed/monitoring/scrutiny/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app scrutiny-api
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://scrutiny.trusted.nirmalhk7.com"
    gethomepage.dev/group: Observability
    gethomepage.dev/description: "Disk health"
    gethomepage.dev/icon: scrutiny-light
    gethomepage.dev/app: scrutiny # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Scrutiny
    gethomepage.dev/weight: "30"
    gethomepage.dev/widget.type: "scrutiny"
    gethomepage.dev/widget.url: "http://scrutiny.mgd-monitoring.svc.cluster.local:8080"
    
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`scrutiny.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: scrutiny
          port: 8080
